Service model, migration & factory

--- a/draft.yaml
+++ b/draft.yaml
@@ -1,2 +1,7 @@
 models:
+    Service:
+        service: string
+        parent_id: unsignedInteger nullable foreign:services.id
+        user_id: unsignedInteger foreign
+        softDeletes
 
